...

      totalDays += monthDays

      return `
        <h3>${month.name} ${month.year}</h3>
        <table>
          <tr><th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th></tr>
          ${rows.join('')}
          <tr class="totals"><td colspan="7">School Days: ${monthDays}</td></tr>
        </table>
      `
    })
    .join('')
...
